adding search bar and buttons

--- a/index.html
+++ b/index.html
@@ -30,8 +30,33 @@
           <input class="logbut" type="button" name="" value="Log in">
         </div>
       </div>
-
     </header>
+    <main>
+      <form class="" action="index.html" method="post">
+
+        <div class="sd">
+            <input id="serbox" type="text" name="" value="">
+            <span class="mic"></span>
+        </div>
+        <div class="botones">
+          <center>
+            <input type="button" class="bots" value="Buscar con Google" aria-label="Buscar con Google">
+            <input type="button" class="bots" value="Voy a tener suerte" aria-label="Voy a tener suerte">
+          </center>
+        </div>
+
+      </form>
+
+
+
+
+
+
+
+
+
+
+    </main>
 
 
 
