adding logo to the page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <main>
       <form class="" action="index.html" method="post">
 
+        <div class="logo">
+          <img src="logo.png" width="272" height="92" alt="">
+        </div>
+
         <div class="sd">
             <input id="serbox" type="text" name="" value="">
             <span class="mic"></span>
