making the footer

--- a/index.html
+++ b/index.html
@@ -39,17 +39,40 @@
         </div>
 
         <div class="sd">
-            <input id="serbox" type="text" name="" value="">
+            <input id="serbox" type="text" name="" value="" role="button">
             <span class="mic"></span>
         </div>
         <div class="botones">
           <center>
             <input type="button" class="bots" value="Buscar con Google" aria-label="Buscar con Google">
             <input type="button" class="bots" value="Voy a tener suerte" aria-label="Voy a tener suerte">
+
+            <div class="offer">
+              Ofrecido por Google en:
+              <a href="#">Español (Latinoamérica)</a>
+            </div>
           </center>
         </div>
 
       </form>
+
+      <footer>
+        <div class="ec">
+          <span>Ecuador</span>
+        </div>
+        <hr class="linea">
+        <div class="ecc">
+          <span class="pos"><a class="esp" href="#">Publicidad</a><a class="esp" href="#">Negocios</a>
+            <a class="esp" href="#">Acerca de</a>
+          </span>
+        </div>
+        <div class="ecc2">
+          <span class="pos2"><a class="esp2" href="#">Privacidad</a><a class="esp2" href="#">Condiciones</a>
+            <a class="esp2" href="#">Preferencias</a>
+          </span>
+        </div>
+
+      </footer>
 
 
 
